@@ -1,3 +1,7 @@
+2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/mqueue.cxx: Fix multi-line string literal warning.
+
 2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* doc/posix.sgml: Document them.
